--- a/demo/src/main/resources/application.properties
+++ b/demo/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 
 
-spring.datasource.url = jdbc:mysql://localhost:3306/lbms?createDatabaseIfNotExist=true
+spring.datasource.url = jdbc:mysql://localhost:3306/lbms1?createDatabaseIfNotExist=true
 spring.datasource.username = root
 spring.datasource.password = root402
-spring.jpa.hibernate.ddl-auto = update
+spring.jpa.hibernate.ddl-auto = create
 book.return.due_date = 14
